Fix navbar button on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,15 @@
 .navbar-custom-50 {
     color: rgb(255,255,255,50%)!important;
 }
+
+.background-white {
+    background-color: white;
+}
+
+.font-white {
+    color: white!important;
+}
+
 .navbar-custom-90 {
     color: rgb(255,255,255,90%)!important;
 }
